--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,60 +1,60 @@
-#name: Pipeline
+name: Pipeline
+
+on: push
+
+env:
+  REGISTRY: ghcr.io
+  IMAGE_NAME: ${{ github.repository }}
+
+jobs:
+  build-and-push-image:
+    runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      packages: write
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v2
+
+      - name: Log in to the Container registry
+        uses: docker/login-action@f054a8b539a109f9f41c372932f1ae047eff08c9
+        with:
+          registry: ${{ env.REGISTRY }}
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Extract metadata (tags, labels) for Docker
+        id: meta
+        uses: docker/metadata-action@98669ae865ea3cffbcbaa878cf57c20bbf1c6c38
+        with:
+          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+
+      - name: Build and push Docker image
+        uses: docker/build-push-action@ad44023a93711e3deb337508980b4b5e9bcdc5dc
+        with:
+          context: .
+          push: true
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
+
+      -   name: Install SSH key
+          uses: shimataro/ssh-key-action@v2
+          with:
+            key: ${{ secrets.PRODUCTION_KEY }}
+            known_hosts: ${{ secrets.PRODUCTION_HOST }}
+          if: ${{ github.ref == 'refs/heads/master' }}
+
+      -   name: Deploy
+          run: make deploy
+          env:
+            IMAGE_TAG: ${{ steps.meta.outputs.tags }}
+            BUILD_NUMBER: ${GITHUB_RUN_NUMBER}
+            registry: ${{ env.REGISTRY }}
+            username: ${{ github.actor }}
+            password: ${{ secrets.GITHUB_TOKEN }}
+            HOST: ${{ secrets.PRODUCTION_HOST }}
+            PORT: ${{ secrets.PRODUCTION_PORT }}
+            API_DB_PASSWORD: ${{ secrets.API_DB_PASSWORD }}
+          if: ${{ github.ref == 'refs/heads/master' }}
 #
-#on: push
-#
-#env:
-#  REGISTRY: ghcr.io
-#  IMAGE_NAME: ${{ github.repository }}
-#
-#jobs:
-#  build-and-push-image:
-#    runs-on: ubuntu-latest
-#    permissions:
-#      contents: read
-#      packages: write
-#
-#    steps:
-#      - name: Checkout repository
-#        uses: actions/checkout@v2
-#
-#      - name: Log in to the Container registry
-#        uses: docker/login-action@f054a8b539a109f9f41c372932f1ae047eff08c9
-#        with:
-#          registry: ${{ env.REGISTRY }}
-#          username: ${{ github.actor }}
-#          password: ${{ secrets.GITHUB_TOKEN }}
-#
-#      - name: Extract metadata (tags, labels) for Docker
-#        id: meta
-#        uses: docker/metadata-action@98669ae865ea3cffbcbaa878cf57c20bbf1c6c38
-#        with:
-#          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
-#
-#      - name: Build and push Docker image
-#        uses: docker/build-push-action@ad44023a93711e3deb337508980b4b5e9bcdc5dc
-#        with:
-#          context: .
-#          push: true
-#          tags: ${{ steps.meta.outputs.tags }}
-#          labels: ${{ steps.meta.outputs.labels }}
-#
-#      -   name: Install SSH key
-#          uses: shimataro/ssh-key-action@v2
-#          with:
-#            key: ${{ secrets.PRODUCTION_KEY }}
-#            known_hosts: ${{ secrets.PRODUCTION_HOST }}
-#          if: ${{ github.ref == 'refs/heads/master' }}
-#
-#      -   name: Deploy
-#          run: make deploy
-#          env:
-#            IMAGE_TAG: ${{ steps.meta.outputs.tags }}
-#            BUILD_NUMBER: ${GITHUB_RUN_NUMBER}
-#            registry: ${{ env.REGISTRY }}
-#            username: ${{ github.actor }}
-#            password: ${{ secrets.GITHUB_TOKEN }}
-#            HOST: ${{ secrets.PRODUCTION_HOST }}
-#            PORT: ${{ secrets.PRODUCTION_PORT }}
-#            API_DB_PASSWORD: ${{ secrets.API_DB_PASSWORD }}
-#          if: ${{ github.ref == 'refs/heads/master' }}
-##
