проблемы конечно имеются, но решаемо офк

--- a/.env
+++ b/.env
@@ -9,7 +9,7 @@ CORS_URL=*
 
 # Databse
 # YOUR_MONGO_DB_NAME
-DB_NAME=kolyan-api
+DB_NAME=kolyanblog
 
 #localhost or IP of the server
 # If using the docker installation then use 'mongo' for host name else localhost or ip or db server
@@ -19,7 +19,7 @@ DB_HOST=mongo-blog
 DB_PORT=27017
 
 #YOUR_MONGO_DB_USER_NAME
-DB_USER=localhost
+DB_USER=admin
 
 #YOUR_MONGO_DB_USER_PWD
 DB_USER_PWD=''
