что то совсем идет не так

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,7 +16,7 @@ services:
       - '80:3000'
     links:
       - mongo-blog
-    command: ./wait-for-it.sh mongo-blog:27018
+    command: sudo ./wait-for-it.sh mongo-blog:27018
 
   mongo-blog:
     image: mongo:4.2.5
@@ -27,7 +27,7 @@ services:
       - MONGO_INITDB_ROOT_PASSWORD=kolyanblog
       - MONGO_INITDB_DATABASE=kolyanblog
     ports:
-      - '27018:27018'
+      - '27017:27017'
     volumes:
       - ./addons/init-mongo.js:/docker-entrypoint-initdb.d/init-mongo.js:ro
       - dbdata:/data/db
