--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,8 +14,8 @@ services:
       DB_USER_PWD: ${API_DB_PASSWORD}
     ports:
       - '80:3000'
-    links:
-      - mongo-blog
+    networks:
+      - app-network
     command: ./wait-for-it.sh mongo-blog:27018
 
   mongo-blog:
